--- a/JerseyCoffee/Modules/Material/View/JSDMaterialCell.xib
+++ b/JerseyCoffee/Modules/Material/View/JSDMaterialCell.xib
@@ -6,79 +6,74 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14790.5"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-        <capability name="iOS 13.0 system colors" minToolsVersion="11.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="JSDMaterialCell">
-            <rect key="frame" x="0.0" y="0.0" width="304" height="250"/>
-            <autoresizingMask key="autoresizingMask"/>
-            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="304" height="250"/>
-                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="material_" translatesAutoresizingMaskIntoConstraints="NO" id="IFj-oh-XhL">
-                        <rect key="frame" x="0.0" y="0.0" width="304" height="150"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="150" id="xUh-1r-KG8"/>
-                        </constraints>
-                    </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0xi-OU-DqN">
-                        <rect key="frame" x="0.0" y="150" width="304" height="100"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aDv-c8-WZZ">
-                                <rect key="frame" x="94.5" y="49" width="115" height="2"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="systemBrownColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="115" id="8dI-bu-G3n"/>
-                                    <constraint firstAttribute="height" constant="2" id="bnw-Tc-Jcb"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="肯亚咖啡豆" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xEq-5y-XDK">
-                                <rect key="frame" x="108.5" y="16" width="87" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="咖啡故事" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xFp-ct-MAd">
-                                <rect key="frame" x="117.5" y="68" width="69.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="xFp-ct-MAd" firstAttribute="top" secondItem="aDv-c8-WZZ" secondAttribute="bottom" constant="17" id="7jp-hg-H1c"/>
-                            <constraint firstItem="aDv-c8-WZZ" firstAttribute="centerX" secondItem="0xi-OU-DqN" secondAttribute="centerX" id="Bqf-ke-2qI"/>
-                            <constraint firstItem="xFp-ct-MAd" firstAttribute="centerX" secondItem="0xi-OU-DqN" secondAttribute="centerX" id="FEs-0v-U8t"/>
-                            <constraint firstItem="aDv-c8-WZZ" firstAttribute="top" secondItem="xEq-5y-XDK" secondAttribute="bottom" constant="12" id="WD2-wm-phS"/>
-                            <constraint firstItem="xEq-5y-XDK" firstAttribute="centerX" secondItem="0xi-OU-DqN" secondAttribute="centerX" id="cy7-k3-LiT"/>
-                            <constraint firstItem="aDv-c8-WZZ" firstAttribute="centerY" secondItem="0xi-OU-DqN" secondAttribute="centerY" id="v1H-4S-CUg"/>
-                        </constraints>
-                    </view>
-                </subviews>
-            </view>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="JSDMaterialCell">
+            <rect key="frame" x="0.0" y="0.0" width="300" height="250"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="material_" translatesAutoresizingMaskIntoConstraints="NO" id="vO7-RV-K8q">
+                    <rect key="frame" x="0.0" y="0.0" width="300" height="139"/>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H7u-V8-HBk">
+                    <rect key="frame" x="0.0" y="139" width="300" height="111"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bc4-VD-jmz">
+                            <rect key="frame" x="110" y="54.5" width="80" height="2"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="2" id="ax4-wO-Ac3"/>
+                                <constraint firstAttribute="width" constant="80" id="tEP-7g-w17"/>
+                            </constraints>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="肯亚咖啡豆" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7D-Bz-Mta">
+                            <rect key="frame" x="106.5" y="27.5" width="87" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="咖啡故事" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H30-sy-I1j">
+                            <rect key="frame" x="115" y="66.5" width="70" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="bc4-VD-jmz" firstAttribute="top" secondItem="c7D-Bz-Mta" secondAttribute="bottom" constant="6" id="4JR-MH-MIx"/>
+                        <constraint firstItem="bc4-VD-jmz" firstAttribute="centerX" secondItem="H7u-V8-HBk" secondAttribute="centerX" id="4PT-7j-Yvc"/>
+                        <constraint firstItem="c7D-Bz-Mta" firstAttribute="centerX" secondItem="H7u-V8-HBk" secondAttribute="centerX" id="4Vb-qy-9cL"/>
+                        <constraint firstItem="bc4-VD-jmz" firstAttribute="centerY" secondItem="H7u-V8-HBk" secondAttribute="centerY" id="ayi-D7-Ixz"/>
+                        <constraint firstItem="H30-sy-I1j" firstAttribute="top" secondItem="bc4-VD-jmz" secondAttribute="bottom" constant="10" id="eec-OU-IhD"/>
+                        <constraint firstItem="H30-sy-I1j" firstAttribute="centerX" secondItem="H7u-V8-HBk" secondAttribute="centerX" id="ygK-km-5z3"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="0xi-OU-DqN" secondAttribute="trailing" id="4Jj-g7-Qme"/>
-                <constraint firstItem="0xi-OU-DqN" firstAttribute="top" secondItem="IFj-oh-XhL" secondAttribute="bottom" id="AWR-Vg-ONA"/>
-                <constraint firstAttribute="trailing" secondItem="IFj-oh-XhL" secondAttribute="trailing" id="M7p-I2-sLq"/>
-                <constraint firstAttribute="bottom" secondItem="0xi-OU-DqN" secondAttribute="bottom" id="Y89-df-Oz0"/>
-                <constraint firstItem="IFj-oh-XhL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="c14-uu-v4I"/>
-                <constraint firstItem="IFj-oh-XhL" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ln4-5g-x7X"/>
-                <constraint firstItem="0xi-OU-DqN" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="vLh-3n-A6g"/>
+                <constraint firstItem="vO7-RV-K8q" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="5am-4L-kHc"/>
+                <constraint firstAttribute="bottom" secondItem="H7u-V8-HBk" secondAttribute="bottom" id="9Kq-98-hsR"/>
+                <constraint firstItem="H7u-V8-HBk" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Bcp-U2-Zxa"/>
+                <constraint firstItem="H7u-V8-HBk" firstAttribute="top" secondItem="vO7-RV-K8q" secondAttribute="bottom" id="BvF-38-PVe"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="H7u-V8-HBk" secondAttribute="trailing" id="KpL-Sv-sry"/>
+                <constraint firstItem="vO7-RV-K8q" firstAttribute="height" secondItem="H7u-V8-HBk" secondAttribute="height" multiplier="1.25" id="Rlr-UI-TYU"/>
+                <constraint firstItem="vO7-RV-K8q" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="lxM-Rb-Zd7"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vO7-RV-K8q" secondAttribute="trailing" id="zbV-Mh-5uZ"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="coffeeStoryLabel" destination="xFp-ct-MAd" id="A3S-YY-GyN"/>
-                <outlet property="lineView" destination="aDv-c8-WZZ" id="hMb-aR-QYc"/>
-                <outlet property="materialImageView" destination="IFj-oh-XhL" id="UUF-gB-TnK"/>
-                <outlet property="meterialNameLabel" destination="xEq-5y-XDK" id="xtz-u8-CyI"/>
-                <outlet property="textContentView" destination="0xi-OU-DqN" id="etO-Mz-cnb"/>
+                <outlet property="coffeeStoryLabel" destination="H30-sy-I1j" id="F3X-Qc-fjM"/>
+                <outlet property="lineView" destination="bc4-VD-jmz" id="LKE-D2-A2g"/>
+                <outlet property="materialImageView" destination="vO7-RV-K8q" id="uLx-YE-9kf"/>
+                <outlet property="meterialNameLabel" destination="c7D-Bz-Mta" id="qd6-Kg-vgc"/>
+                <outlet property="textContentView" destination="H7u-V8-HBk" id="Bgq-dX-uCh"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="119.86607142857142"/>
-        </collectionViewCell>
+            <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
+        </view>
     </objects>
     <resources>
         <image name="material_" width="152" height="116"/>
