--- a/JerseyCoffee/Modules/Coffee/ViewController/JSDCoffeeDetailVC.xib
+++ b/JerseyCoffee/Modules/Coffee/ViewController/JSDCoffeeDetailVC.xib
@@ -38,8 +38,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="20b-o3-ext">
                     <rect key="frame" x="0.0" y="44" width="414" height="200"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="latte_coffee" translatesAutoresizingMaskIntoConstraints="NO" id="YXc-DZ-mUH">
-                            <rect key="frame" x="107" y="20" width="200" height="160"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="material_" translatesAutoresizingMaskIntoConstraints="NO" id="YXc-DZ-mUH">
+                            <rect key="frame" x="131" y="42" width="152" height="116"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="CER-V6-FTJ"/>
                                 <constraint firstAttribute="height" relation="lessThanOrEqual" constant="160" id="SAW-59-RPy"/>
@@ -183,6 +183,6 @@
         </view>
     </objects>
     <resources>
-        <image name="latte_coffee" width="369" height="307"/>
+        <image name="material_" width="152" height="116"/>
     </resources>
 </document>
