--- a/JerseyCoffee/Supporting Files/Base.lproj/LaunchScreen.storyboard
+++ b/JerseyCoffee/Supporting Files/Base.lproj/LaunchScreen.storyboard
@@ -18,11 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coffee_tabbar_selected" translatesAutoresizingMaskIntoConstraints="NO" id="N1j-cO-v4l">
-                                <rect key="frame" x="195" y="738.5" width="24" height="26.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="luanch_log" translatesAutoresizingMaskIntoConstraints="NO" id="N1j-cO-v4l">
+                                <rect key="frame" x="173" y="697" width="68" height="68"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="JerseyCafe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19g-g1-wjS">
-                                <rect key="frame" x="119" y="785" width="176" height="41"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="咖啡小知识" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19g-g1-wjS">
+                                <rect key="frame" x="119.5" y="785" width="175" height="41"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="35"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -44,6 +44,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="coffee_tabbar_selected" width="24" height="26.5"/>
+        <image name="luanch_log" width="68" height="68"/>
     </resources>
 </document>
